ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  defaultBackend:
    service:
      name: de-default # any HTTP request that hits the Ingress controller is forwarded on to the alpaca service.
      port:
        number: 8080
  rules:
    - host: alpaca.example.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: alpaca
              port:
                number: 8080
    - host: bandicoot.example.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: bandicoot
              port:
                number: 8080
