ingress/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  defaultBackend:
    service:
      name: alpaca # any HTTP request that hits the Ingress controller is forwarded on to the alpaca service.
      port:
        number: 8080
